Fixing distorted images in certain pages (e.g. vangogh Steam News)

--- a/style/iframe-expand-content.css
+++ b/style/iframe-expand-content.css
@@ -19,4 +19,5 @@ body {
 
 img, video {
     max-width: 100%;
+    height: unset;
 }
